--- a/FlightSearch.API/FlightSearch.API.csproj
+++ b/FlightSearch.API/FlightSearch.API.csproj
@@ -12,12 +12,12 @@
     <PackageReference Include="Carter" Version="8.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.6" />
     <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="8.0.6" />
+    <PackageReference Include="Refit.HttpClientFactory" Version="7.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\FlightSearch.Application\FlightSearch.Application.csproj" />
-    <ProjectReference Include="..\FlightSearch.Infrastructure\FlightSearch.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
