--- a/FlightSearch.API/appsettings.json
+++ b/FlightSearch.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApiSettings": {
+    "GatewayAddress": "https://testresources.virginatlantic.com"
+  }
 }
