--- a/FlightSearch.Infrastructure/FlightSearch.Infrastructure.csproj
+++ b/FlightSearch.Infrastructure/FlightSearch.Infrastructure.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.6" />
+    <PackageReference Include="Refit.HttpClientFactory" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
